--- a/shiro-demo/shiro-demo/pom.xml
+++ b/shiro-demo/shiro-demo/pom.xml
@@ -59,6 +59,10 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<fork>true</fork>
+					<jvmArguments>-Dfile.encoding=GBK</jvmArguments>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
