--- a/springboot-dubbo-parent/springboot-dubbo-server/apringboot-dubbo-provider/src/main/resources/application.properties
+++ b/springboot-dubbo-parent/springboot-dubbo-server/apringboot-dubbo-provider/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/mc_config?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.password=kenny
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.max-active=10
 spring.datasource.max-idle=5
