成功mvn clean install打包

--- a/springboot-dubbo-parent/springboot-dubbo-server/apringboot-dubbo-provider/pom.xml
+++ b/springboot-dubbo-parent/springboot-dubbo-server/apringboot-dubbo-provider/pom.xml
@@ -74,6 +74,17 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<!--以下为我添加的-->
+				<!--<configuration>
+					<mainClass>com.example.demo.provider.ApringbootDubboProviderApplication</mainClass>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>repackage</goal>
+						</goals>
+					</execution>
+				</executions>-->
 			</plugin>
 		</plugins>
 	</build>
